coffee + scss connected

--- a/app/views/layout.slim
+++ b/app/views/layout.slim
@@ -2,5 +2,7 @@ doctype html
 html
   head
     title Condor - fly as high as the sun
+    link rel='stylesheet' href='/stylesheets/styles.css'
   body
     == yield
+    script src='/javascripts/application.js'
