--- a/app/public/stylesheets/styles.css
+++ b/app/public/stylesheets/styles.css
@@ -1,2 +1,16 @@
-body{background:#333;color:#FFF}
-/*# sourceMappingURL=styles.css.map */
+body{
+    background: #333;
+    color: #FFF;
+}
+
+.search{
+    border-radius: 5px;
+    height: auto;
+    padding: 10px;
+    margin: 10px 0;
+
+    background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
+}
+.search .form-group{
+    margin-bottom: 0;
+}
