--- a/app/views/index.slim
+++ b/app/views/index.slim
@@ -1,4 +1,7 @@
 .container-fluid
+  .row
+    .col-md-10.col-md-offset-1
+      h1.title Condor
   .search
     .row
       .col-md-10.col-md-offset-1
