--- a/app/public/stylesheets/styles.css
+++ b/app/public/stylesheets/styles.css
@@ -1,24 +1,33 @@
-body{
-    background: #333;
-    color: #FFF;
+body {
+  background: #333;
+  color: #FFF;
 }
 
-.title{
-    font-size: 42px !important;
-    font-weight: bold;
-    background: -webkit-linear-gradient(#2cb5e8, #1fc8db);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+.title {
+  font-size: 42px !important;
+  font-weight: bold;
+  background: -webkit-linear-gradient(#2cb5e8, #1fc8db);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
-.search{
-    border-radius: 5px;
-    height: auto;
-    padding: 10px;
-    margin: 10px 0;
-
-    background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
+/* Search form */
+.search {
+  border-radius: 5px;
+  height: auto;
+  padding: 10px;
+  margin: 10px 0;
+  background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
 }
-.search .form-group{
-    margin-bottom: 0;
+
+.search .form-group {
+  margin-bottom: 0;
+}
+
+.search .form-group label {
+  color: #FFF;
+}
+
+.col-btn-search {
+  padding-top: 25px;
 }
