Airports + Airlines specs;

--- a/app/views/index.slim
+++ b/app/views/index.slim
@@ -11,11 +11,11 @@
               .col-md-4
                 .form-group
                   label Departure
-                  input#departure.form-control placeholder="Sydney" type="text"
+                  input#departure.form-control placeholder="eg: Sydney" type="text"
               .col-md-4
                 .form-group
                   label Destination
-                  input#destination.form-control placeholder="Heathrow" type="text"
+                  input#destination.form-control placeholder="eg: Heathrow" type="text"
               .col-md-3
                 .form-group
                   label Travel date
