--- a/app/views/index.slim
+++ b/app/views/index.slim
@@ -20,7 +20,7 @@
                 .form-group
                   label Travel date
                   .input-group.date
-                    input#date.form-control placeholder="YYYY-MM-DD" type="text" required="required" value="#{Date.today.strftime('%Y-%m-%d')}"
+                    input#date.form-control placeholder="YYYY-MM-DD" type="text" required="required" value="#{(Date.today + 1).strftime('%Y-%m-%d')}"
                     span.input-group-addon
                       i.glyphicon.glyphicon-calendar
               .col-md-1.col-btn-search
