display Progress bar on AJAX requests;

--- a/app/views/index.slim
+++ b/app/views/index.slim
@@ -24,5 +24,7 @@
                     span.input-group-addon
                       i.glyphicon.glyphicon-calendar
               .col-md-1.col-btn-search
-                button.btn.btn-default.btn-warning type="submit" Search
+                button.btn.btn-default.btn-warning#search_btn type="submit" Search
   #message
+  .progress.hidden#progressbar
+    .progress-bar.progress-bar-info.progress-bar-striped.active role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"
