--- a/app/views/index.slim
+++ b/app/views/index.slim
@@ -28,3 +28,4 @@
   #message
   .progress.hidden#progressbar
     .progress-bar.progress-bar-info.progress-bar-striped.active role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"
+      span Searching, please wait a moment...
