--- a/app/views/layout.slim
+++ b/app/views/layout.slim
@@ -9,6 +9,8 @@ html
     / datepicker
     link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.0-RC3/css/bootstrap-datepicker3.min.css"
     script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.0-RC3/js/bootstrap-datepicker.js"
+    / moments for time
+    script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"
   body
     == yield
     script src='/javascripts/application.js?t=#{Time.now}'
