start.sh command;

--- a/app/views/layout.slim
+++ b/app/views/layout.slim
@@ -13,4 +13,4 @@ html
     script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"
   body
     == yield
-    script src='/javascripts/application.js?t=#{Time.now}'
+    script src='/javascripts/application.js'
